Queue Linked List and Linked List with Tail implementation
Test and fix bugs